clang/test/CIR/IR/invalid-assume.cir
// RUN: cir-opt %s -verify-diagnostics -split-input-file

!void = !cir.void

module {
  cir.func @assume_bundle_args_without_kind(%arg0 : !cir.ptr<!void>) {
    %0 = cir.const #cir.bool<true> : !cir.bool
    // expected-error@+1 {{unexpected bundle operands for kind 'none'}}
    "cir.assume"(%0, %arg0) : (!cir.bool, !cir.ptr<!void>) -> ()
    cir.return
  }
}

// -----

!void = !cir.void

module {
  cir.func @assume_deref_wrong_arity(%arg0 : !cir.ptr<!void>) {
    %0 = cir.const #cir.bool<true> : !cir.bool
    // expected-error@+1 {{dereferenceable bundle expects 2 operands}}
    cir.assume %0 dereferenceable(%arg0 : !cir.ptr<!void>) : !cir.bool
    cir.return
  }
}
